[gd_scene load_steps=5 format=3 uid="uid://covonsma0xnhp"]

[ext_resource type="Script" uid="uid://nv2sdkafifvk" path="res://Scripts/main_menu.gd" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://buchijmd1hyyk" path="res://Assets/Fonts/Ithaca-LVB75.ttf" id="2_48xlc"]
[ext_resource type="PackedScene" uid="uid://qa4td3814q3f" path="res://Scenes/fade_in_out.tscn" id="3_1ehe0"]
[ext_resource type="PackedScene" uid="uid://cyw82gvoacmgs" path="res://Scenes/player_menu.tscn" id="5_n45e2"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_28flt")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1159.0
offset_bottom = 654.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 444.0
offset_top = 263.0
offset_right = 719.0
offset_bottom = 348.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="Options" type="Button" parent="Control"]
layout_mode = 0
offset_left = 444.0
offset_top = 368.0
offset_right = 719.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Quit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 444.0
offset_top = 475.0
offset_right = 719.0
offset_bottom = 560.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 247.0
offset_top = 26.0
offset_right = 917.0
offset_bottom = 228.0
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 200
text = "SynK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="fade_in_out" parent="." instance=ExtResource("3_1ehe0")]
visible = false
z_index = 5

[node name="Timer" type="Timer" parent="fade_in_out"]

[node name="Player_Menu" parent="." instance=ExtResource("5_n45e2")]
position = Vector2(608, 101)

[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Control/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="fade_in_out/Timer" to="." method="_on_timer_timeout"]
